Add the start of a type to handle connections to the network

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,8 @@ AM_CPPFLAGS = \
 notbit_SOURCES = \
 	ntb-buffer.c \
 	ntb-buffer.h \
+	ntb-connection.c \
+	ntb-connection.h \
 	ntb-error.c \
 	ntb-error.h \
 	ntb-list.c \
