Add an object to handle disk I/O
Adds ntb_store which will handle loading and saving objects in a
seprate thread. Currently it only handles saving. The commands are
added to a queue which are handled by the worker thread.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,8 @@ notbit_SOURCES = \
 	ntb-slab.h \
 	ntb-slice.c \
 	ntb-slice.h \
+	ntb-store.c \
+	ntb-store.h \
 	ntb-util.c \
 	ntb-util.h \
 	main.c \
