Move the reference counting from ntb_blob to a standalone helper
The thread-safe reference counting will be useful for other structs
too. This puts the code into a header with static inline helpers.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,6 +36,7 @@ notbit_SOURCES = \
 	ntb-pow.h \
 	ntb-proto.c \
 	ntb-proto.h \
+	ntb-ref-count.h \
 	ntb-signal.h \
 	ntb-slab.c \
 	ntb-slab.h \
