Add a generic error domain for errno errors
When the errors are just generated from errnos, instead of trying to
make a separate error domain for each module, they now all just report
using the new ntb_file_error.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,8 @@ notbit_SOURCES = \
 	ntb-connection.h \
 	ntb-error.c \
 	ntb-error.h \
+	ntb-file-error.c \
+	ntb-file-error.h \
 	ntb-hash-table.c \
 	ntb-hash-table.h \
 	ntb-list.c \
