Add code for generating keys
This adds ntb_crypto which represents a thread that will be used for
doing all of the work involving time-consuming cryptography. The tasks
have a cancellable cookie like ntb_store and ntb_pow. Currently it can
only generate a key pair. The key pair is stored in a new
ref-countable struct called ntb_key.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,12 +16,16 @@ notbit_SOURCES = \
 	ntb-connection.h \
 	ntb-cpus.c \
 	ntb-cpus.h \
+	ntb-crypto.c \
+	ntb-crypto.h \
 	ntb-error.c \
 	ntb-error.h \
 	ntb-file-error.c \
 	ntb-file-error.h \
 	ntb-hash-table.c \
 	ntb-hash-table.h \
+	ntb-key.c \
+	ntb-key.h \
 	ntb-list.c \
 	ntb-list.h \
 	ntb-log.c \
