Add ACLOCAL_AMFLAGS to the toplevel Makefile.am
Without this older versions of autoreconf won't find the
as-compiler-flags macro.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,6 @@
+# XXX - this is a massive hack to make autoreconf honour the ACLOCAL_FLAGS
+# that jhbuild sets while still retaining build/autotools as the authoritative
+# source for m4 macros
+ACLOCAL_AMFLAGS = -I build/autotools ${ACLOCAL_FLAGS}
+
 SUBDIRS = src
