Add an object to represent the keyring
The plan is that this will keep track of all of the known private keys
and listen for new messages from the network. It will then ask the
crypto thread to try decrypting them. Currently it just has a list of
the keys and has a cancellable function to generate a new one.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,8 @@ notbit_SOURCES = \
 	ntb-hash-table.h \
 	ntb-key.c \
 	ntb-key.h \
+	ntb-keyring.c \
+	ntb-keyring.h \
 	ntb-list.c \
 	ntb-list.h \
 	ntb-log.c \
