Move the public key creating function to its own file
This will also need to be used when loading private keys from the
store.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,8 @@ notbit_SOURCES = \
 	ntb-pow.h \
 	ntb-proto.c \
 	ntb-proto.h \
+	ntb-pub-key-maker.c \
+	ntb-pub-key-maker.h \
 	ntb-ref-count.h \
 	ntb-signal.h \
 	ntb-slab.c \
