Load the private keys from the store
This adds some code to parse the keys.dat file. The ntb_keyring uses
this via the ntb_store whenever it is created.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,6 +34,8 @@ notbit_SOURCES = \
 	ntb-keyring.h \
 	ntb-list.c \
 	ntb-list.h \
+	ntb-load-keys.c \
+	ntb-load-keys.h \
 	ntb-log.c \
 	ntb-log.h \
 	ntb-main-context.c \
