Add a list implementation for lists of pointers
Adds ntb_pointer_list which is a tiny slice-allocated node built on
top of ntb_list to use as a linked list when we can't really embed a
link node in the target struct. The ntb_keyring now uses this for the
list of keys.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,6 +44,8 @@ notbit_SOURCES = \
 	ntb-netaddress.h \
 	ntb-network.c \
 	ntb-network.h \
+	ntb-pointer-list.c \
+	ntb-pointer-list.h \
 	ntb-pow.c \
 	ntb-pow.h \
 	ntb-proto.c \
