Add the framework for an IPC mechanism
Notbit now listens on an abstract Unix domain socket for external
commands. It uses a custom protocol which is described in
doc/ipc-protocol.txt. There are currently no commands but eventually
it will be used to pass emails into the daemon from an external
process.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,10 @@
 # source for m4 macros
 ACLOCAL_AMFLAGS = -I build/autotools ${ACLOCAL_FLAGS}
 
-SUBDIRS = src
+SUBDIRS = \
+	doc \
+	src \
+	$(NULL)
 
 EXTRA_DIST = \
 	README \
