--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,11 @@ notbit_SOURCES = \
 	ntb-file-error.h \
 	ntb-hash-table.c \
 	ntb-hash-table.h \
+	ntb-ipc.c \
+	ntb-ipc.h \
+	ntb-ipc-proto.h \
+	ntb-ipc-sockaddr.c \
+	ntb-ipc-sockaddr.h \
 	ntb-key.c \
 	ntb-key.h \
 	ntb-keyring.c \
