Add a notbit-sendmail command
This uses the IPC mechanism to pass an email into the system. The
email is given on the stdin of notbit-sendemail. It uses fd passing to
give the fd for the stdin directly to notbit to avoid a copy.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,7 @@
-bin_PROGRAMS = notbit
+bin_PROGRAMS = \
+	notbit \
+	notbit-sendmail \
+	$(NULL)
 
 noinst_PROGRAMS = dump-store
 
@@ -79,6 +82,26 @@ notbit_SOURCES = \
 
 notbit_LDFLAGS = \
 	$(LIBCRYPTO_LIBS) \
+	$(NOTBIT_EXTRA_LIBS) \
+	-pthread \
+	$(NULL)
+
+notbit_sendmail_SOURCES = \
+	ntb-buffer.c \
+	ntb-buffer.h \
+	ntb-error.c \
+	ntb-error.h \
+	ntb-file-error.c \
+	ntb-file-error.h \
+	ntb-sendmail.c \
+	ntb-ipc-proto.h \
+	ntb-ipc-sockaddr.c \
+	ntb-ipc-sockaddr.h \
+	ntb-util.c \
+	ntb-util.h \
+	$(NULL)
+
+notbit_sendmail_LDFLAGS = \
 	$(NOTBIT_EXTRA_LIBS) \
 	-pthread \
 	$(NULL)
