Add code for parsing an email message
This parses the an RFC822-format message in chunks and provides
callbacks to report the important information such as the to and from
addresses, the subject and the contents. The content type and transfer
encoding are checked to ensure that the content format is compatible
with UTF-8, ie it is either UTF-8 or ASCII and the encoding is either
7bit or 8bit. It doesn't yet try to convert the format.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -45,12 +45,18 @@ notbit_SOURCES = \
 	ntb-load-keys.h \
 	ntb-log.c \
 	ntb-log.h \
+	ntb-mail-parser.c \
+	ntb-mail-parser.h \
 	ntb-main-context.c \
 	ntb-main-context.h \
 	ntb-netaddress.c \
 	ntb-netaddress.h \
 	ntb-network.c \
 	ntb-network.h \
+	ntb-parse-addresses.c \
+	ntb-parse-addresses.h \
+	ntb-parse-content-type.c \
+	ntb-parse-content-type.h \
 	ntb-pointer-array.h \
 	ntb-pow.c \
 	ntb-pow.h \
