Support quoted-printable as the mail transfer encoding
This adds a simple quoted-printable decoder which is used when the
email sets the content-transfer-encoding header to quoted-printable.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -67,6 +67,8 @@ notbit_SOURCES = \
 	ntb-pow.h \
 	ntb-proto.c \
 	ntb-proto.h \
+	ntb-quoted-printable.c \
+	ntb-quoted-printable.h \
 	ntb-ref-count.h \
 	ntb-signal.h \
 	ntb-slab.c \
