Combine notbit and notbit-sendmail into one executable
These two programs are now a single executable. The code for the
daemon has been moved from main.c to ntb-daemon.c and main.c now just
contains a short main function to determine which function to perform
based on argv[0]. A symbolic link is created for ntb-sendmail.

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AM_CONFIG_HEADER([config.h])
 AC_GNU_SOURCE
 
 AC_PROG_CC
+AC_PROG_LN_S
 
 AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-xz tar-ustar])
 
