Extract the client IPC code from ntb-sendmail into helper functions
The functions for sending a command and reading the response are now
moved to the ntb_ipc_* namespace so that they can also be used by
other utilities.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,6 +38,8 @@ notbit_SOURCES = \
 	ntb-hash-table.h \
 	ntb-ipc.c \
 	ntb-ipc.h \
+	ntb-ipc-client.c \
+	ntb-ipc-client.h \
 	ntb-ipc-proto.c \
 	ntb-ipc-proto.h \
 	ntb-ipc-sockaddr.c \
