Decode encoded words in the subject line
This adds a module to decode encoded words. This is now used to
process the subject line so that Unicode can be used.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,8 @@ notbit_SOURCES = \
 	ntb-daemon.h \
 	ntb-ecc.c \
 	ntb-ecc.h \
+	ntb-encoded-words.c \
+	ntb-encoded-words.h \
 	ntb-error.c \
 	ntb-error.h \
 	ntb-file-error.c \
