Move the linker dependency flags to LDADD instead of LDFLAGS
Otherwise automake puts -lcrypto at the beginning of the linker
arguments and it won't work if openssl is built as a static library.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -95,9 +95,12 @@ notbit_SOURCES = \
 	$(NULL)
 
 notbit_LDFLAGS = \
+	-pthread \
+	$(NULL)
+
+notbit_LDADD = \
 	$(LIBCRYPTO_LIBS) \
 	$(NOTBIT_EXTRA_LIBS) \
-	-pthread \
 	$(NULL)
 
 dump_store_SOURCES = \
