--- a/configure.ac
+++ b/configure.ac
@@ -111,6 +111,7 @@ AC_SUBST(NOTBIT_EXTRA_LIBS)
 
 AC_CONFIG_FILES([
         Makefile
+        build/Makefile
         doc/Makefile
         src/Makefile
 ])
