Split the key-value file parser out from ntb_load_keys
The code to parse a .ini-style key/value file in ntb_load_keys has
been moved out to that it can eventually be used for other files too.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,6 +48,8 @@ notbit_SOURCES = \
 	ntb-ipc-sockaddr.h \
 	ntb-key.c \
 	ntb-key.h \
+	ntb-key-value.c \
+	ntb-key-value.h \
 	ntb-keygen.c \
 	ntb-keygen.h \
 	ntb-keyring.c \
