Store the outgoing message state in a key-value file
The outgoing messages are now stored in outgoing-messages.dat in the
data directory so that if Notbit exits before an acknowledgement is
received it can continue sending the message when it next starts.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,6 +58,8 @@ notbit_SOURCES = \
 	ntb-list.h \
 	ntb-load-keys.c \
 	ntb-load-keys.h \
+	ntb-load-outgoings.c \
+	ntb-load-outgoings.h \
 	ntb-log.c \
 	ntb-log.h \
 	ntb-mail-parser.c \
