Move the message saving code to its own file
The code in the store to save a message is a bit large and has a fair
few helper functions so it's more convenient in its own file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,6 +82,8 @@ notbit_SOURCES = \
 	ntb-quoted-printable.c \
 	ntb-quoted-printable.h \
 	ntb-ref-count.h \
+	ntb-save-message.c \
+	ntb-save-message.h \
 	ntb-sendmail.c \
 	ntb-sendmail.h \
 	ntb-signal.h \
