Query the bootstrap DNS servers for extra peers
The ntb_network now queries the two bootstrap hostnames for extra
default peers when it loads.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,8 @@ notbit_SOURCES = \
 	ntb-crypto.h \
 	ntb-daemon.c \
 	ntb-daemon.h \
+	ntb-dns-bootstrap.c \
+	ntb-dns-bootstrap.h \
 	ntb-ecc.c \
 	ntb-ecc.h \
 	ntb-encoded-words.c \
