Use getpeereid instead of SOL_PEERCRED if available
SOL_PEERCRED is not available on BSD systems but we can use getpeereid
instead.

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,8 @@ AS_IF([test "x$have_clock_gettime" = "xno"],
                     [NOTBIT_EXTRA_LIBS="$NOTBIT_EXTRA_LIBS -lrt"],
                     [clock_gettime required but not found])])
 
+AC_CHECK_FUNCS([getpeereid])
+
 dnl     ============================================================
 dnl     Enable strict compiler flags
 dnl     ============================================================
