Don't use _Static_assert if the compiler doesn't support it
This makes it easier to build with older compilers.

--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,14 @@ AS_IF([test "x$have_sync_ref_count" = "xyes"],
       [AC_DEFINE([HAVE_SYNC_REF_COUNT], [1],
                  [GCC extensions for atomic ref-counting are available])])
 
+AC_MSG_CHECKING([for _Static_assert])
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([_Static_assert (1, "");],
+                                   [(void) 0])],
+                  [AC_DEFINE([HAVE_STATIC_ASSERT], [1],
+                             [Whether _Static_assert can be used or not])
+                   AC_MSG_RESULT([yes])],
+                  [AC_MSG_RESULT([no])])
+
 have_clock_gettime=no
 AC_CHECK_FUNC([clock_gettime], [have_clock_gettime=yes])
 AS_IF([test "x$have_clock_gettime" = "xno"],
