Add an option to use a SOCKSv5 proxy
Adds the -r option which can be used to specify a SOCKSv5 proxy. There
is a separate function in ntb_connection to connect via a proxy. This
uses a new ntb_proxy object to manage the proxy connection state. The
ntb_proxy shares the input and output buffers of the ntb_connection
and the read and write functions of ntb_connection divert to ntb_proxy
until the connection is established.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,8 @@ notbit_SOURCES = \
 	ntb-pow.h \
 	ntb-proto.c \
 	ntb-proto.h \
+	ntb-proxy.c \
+	ntb-proxy.h \
 	ntb-quoted-printable.c \
 	ntb-quoted-printable.h \
 	ntb-ref-count.h \
